# refoliate

./: CHANGES.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SUPPORT.md  codemeta.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: rename_project.sh
refoliate/: __init__.py  __main__.py
