# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created 2022-06-30
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/refoliate
# =============================================================================

[metadata]
name          = refoliate
version       = 0.0.1
description   = REstore FOLIo sAved insTance rEcords
author        = Mike Hucka
author_email  = helpdesk@library.caltech.edu
license       = https://data.caltech.edu/license
license_files = LICENSE
url           = https://github.com/caltechlibrary/refoliate
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/refoliate
  Bug Tracker = https://github.com/caltechlibrary/refoliate/issues
keywords      = Python, applications
classifiers   =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
  refoliate = refoliate.__main__:console_scripts_main
